--- a/index.html
+++ b/index.html
@@ -349,24 +349,24 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
 
 
         <!-- Copyright Start -->
-        <div class="container-fluid copyright bg-dark py-4">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                        <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
-                    </div>
-                    <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
-                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
-                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
-                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
-                    </div>
-                    <div class="col-md-4 my-auto text-center text-md-end text-white">
-                        Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a>
-                    </div>
-                </div>
+<div class="container-fluid copyright bg-dark py-4">
+    <div class="container-xl"> <!-- Changed to container-xl for extra-large width -->
+        <div class="row">
+            <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                <h1 class="text-primary mb-0 display-5" style="font-size: 1.5rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span></h1>
+            </div>
+            <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
+                <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-2 me-md-4"><i class="fab fa-facebook-f text-white"></i>facebook</a>
+                <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-2 me-md-4"><i class="fab fa-instagram text-white"></i>instagram</a>
+                <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-white"></i>linkedin</a>
+            </div>
+            <div class="col-md-4 my-auto text-center text-md-end text-white">
+                <p class="mb-0" style="font-size: 1rem;">Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a></p>
             </div>
         </div>
-        <!-- Copyright End -->
+    </div>
+</div>
+<!-- Copyright End -->
         
 
         <!-- Back to Top -->
