--- a/index.html
+++ b/index.html
@@ -349,11 +349,11 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
 
 
         <!-- Copyright Start -->
-<div class="container-fluid copyright bg-dark py-4">
+<div class="container-fluid copyright py-4" style="background-color: rgba(0, 0, 0, 0);"> <!-- Set background color to transparent black -->
     <div class="container-xl"> <!-- Changed to container-xl for extra-large width -->
         <div class="row">
             <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                <h1 class="text-primary mb-0 display-5" style="font-size: 1.5rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span></h1>
+                <h1 class="text-primary mb-0 display-5" style="font-size: 1.2rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span></h1> <!-- Adjusted font-size -->
             </div>
             <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
                 <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-2 me-md-4"><i class="fab fa-facebook-f text-white"></i>facebook</a>
@@ -361,7 +361,7 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                 <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-white"></i>linkedin</a>
             </div>
             <div class="col-md-4 my-auto text-center text-md-end text-white">
-                <p class="mb-0" style="font-size: 1rem;">Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a></p>
+                <p class="mb-0" style="font-size: 0.9rem;">Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a></p> <!-- Adjusted font-size -->
             </div>
         </div>
     </div>
