--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="project-item">
                 <div class="project-left bg-dark"></div>
                 <div class="project-right bg-dark"></div>
-                <img src="BriskSrcFolder/BriskImages/BriskRodent.gif" class="img-fluid" alt="img">
+                <img src="BriskSrcFolder/BriskImages/BriskRodent.png" class="img-fluid" alt="img">
                 <div class="project-details">
                     <a href="#" class="fs-5 fw-bold text-center">Rodent Control</a>
                     <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p>
@@ -157,7 +157,7 @@
             <div class="project-item">
                 <div class="project-left bg-dark"></div>
                 <div class="project-right bg-dark"></div>
-                <img src="BriskSrcFolder/BriskImages/BriskMosquito.gif" class="img-fluid" alt="img">
+                <img src="BriskSrcFolder/BriskImages/BriskMosquito.png" class="img-fluid" alt="img">
                 <div class="project-details">
                     <a href="#" class="fs-5 fw-bold text-center">Mosquito Control</a>
                     <p class="fs-6 text-center">Fast, eco Mosquito Control for a bite-free zone!</p>
@@ -170,7 +170,7 @@
             <div class="project-item">
                 <div class="project-left bg-dark"></div>
                 <div class="project-right bg-dark"></div>
-                <img src="BriskSrcFolder/BriskImages/BriskCockroach.gif" class="img-fluid" alt="img">
+                <img src="BriskSrcFolder/BriskImages/BriskCockroach.png" class="img-fluid" alt="img">
                 <div class="project-details">
                     <a href="#" class="fs-5 fw-bold text-center">Cockroach Control</a>
                     <p class="fs-6 text-center">Fast, eco Cockroach Control for a pest-free space!</p>
