--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="project-item">
                 <div class="project-left bg-dark"></div>
                 <div class="project-right bg-dark"></div>
-                <img src="BriskSrcFolder/BriskImages/BriskRodent.png" class="img-fluid" alt="img">
+                <img src="BriskSrcFolder/BriskImages/BriskRodent.svg" class="img-fluid" alt="img">
                 <div class="project-details">
                     <a href="#" class="fs-5 fw-bold text-center">Rodent Control</a>
                     <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p>
