--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 <div class="project-right bg-dark"></div>
                 <img src="BriskSrcFolder/BriskImages/BriskRodent.svg" class="img-fluid" alt="img">
                 <div class="project-details">
-                    <a href="#" class="fs-5 fw-bold text-center">Rodent Control</a>
-                    <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p>
+                     <!-- <a href="#" class="fs-5 fw-bold text-center">Rodent Control</a> -->
+                     <!-- <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p> -->
                 </div>
             </div>
         </div>
@@ -159,8 +159,8 @@
                 <div class="project-right bg-dark"></div>
                 <img src="BriskSrcFolder/BriskImages/BriskMosquito.svg" class="img-fluid" alt="img">
                 <div class="project-details">
-                    <a href="#" class="fs-5 fw-bold text-center">Mosquito Control</a>
-                    <p class="fs-6 text-center">Fast, eco Mosquito Control for a bite-free zone!</p>
+                     <!-- <a href="#" class="fs-5 fw-bold text-center">Rodent Control</a> -->
+                     <!-- <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p> -->
                 </div>
             </div>
         </div>
@@ -172,8 +172,8 @@
                 <div class="project-right bg-dark"></div>
                 <img src="BriskSrcFolder/BriskImages/BriskCockroach.svg" class="img-fluid" alt="img">
                 <div class="project-details">
-                    <a href="#" class="fs-5 fw-bold text-center">Cockroach Control</a>
-                    <p class="fs-6 text-center">Fast, eco Cockroach Control for a pest-free space!</p>
+                     <!-- <a href="#" class="fs-5 fw-bold text-center">Rodent Control</a> -->
+                     <!-- <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p> -->
                 </div>
             </div>
         </div>
