--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Usefull Link</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/about.html"><i class="fa fa-check me-2"></i>About Us</a>
-                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
-                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/service.html"><i class="fa fa-check me-2"></i>Our Services</a>
-                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/project.html"><i class="fa fa-check me-2"></i>Licence</a>
+                                <a class="btn btn-link ps-0" href="about.html"><i class="fa fa-check me-2"></i>About Us</a>
+                                <a class="btn btn-link ps-0" href="contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
+                                <a class="btn btn-link ps-0" href="service.html"><i class="fa fa-check me-2"></i>Our Services</a>
+                                <a class="btn btn-link ps-0" href="project.html"><i class="fa fa-check me-2"></i>Licence</a>
                             </div>
                         </div>
                     </div>
