--- a/about.html
+++ b/about.html
@@ -1,112 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
+<head>
     <meta charset="utf-8">
     <title>Brisk Pest Management</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
     <link rel="icon" href="img/brisklogo.png" type="image/png">
-</head>
 
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
 
-        <!-- Google Web Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-        <!-- Icon Font Stylesheet -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-        <!-- Libraries Stylesheet -->
-        <link href="lib/animate/animate.min.css" rel="stylesheet">
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Customized Bootstrap Stylesheet -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        
-        <!-- Your Logo Stylesheet -->
+    <!-- Your Logo Stylesheet -->
     <style>
         .logo-container {
-            background-image: url('img/brisklogo.png'); /* Update the path to your actual logo */
+            background-image: url('img/brisklogo.png');
             background-size: cover;
-            width: 200px; /* Set a width for your logo container */
-            height: 100px; /* Set a height for your logo container */
+            width: 200px;
+            height: 100px;
         }
     </style>
+
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
 
-        <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+    <!-- Spinner Start -->
+    <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50 d-flex align-items-center justify-content-center">
+        <div class="spinner-grow text-primary" role="status"></div>
+    </div>
+    <!-- Spinner End -->
 
-    <body>
-        <!-- Spinner Start -->
-        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50 d-flex align-items-center justify-content-center">
-            <div class="spinner-grow text-primary" role="status"></div>
-        </div>
-        <!-- Spinner End -->
-
-        <!-- Topbar Start -->
-        <div class="container-fluid topbar-top bg-primary">
-            <div class="container">
-                <div class="d-flex justify-content-between topbar py-2">
-                    <div class="d-flex align-items-center flex-shrink-0 topbar-info">
-                        <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
-                        <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
-                        <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
-                    </div>
-                    <div class="text-end pe-4 me-4 border-end border-dark search-btn">
-                        <div class="search-form">
-                            <form method="post" action="index.html">
-                                <div class="form-group">
-                                    <div class="d-flex">
-                                        <input type="search" class="form-control border-0 rounded-pill" name="search-input" value="" placeholder="Search Here" required=""/>
-                                        <button type="submit" value="Search Now!" class="btn"><i class="fa fa-search text-dark"></i></button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center justify-content-center topbar-icon">
-                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
-                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
-                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
+    <!-- Navbar Start -->
+    <div class="container-fluid bg-dark">
+        <div class="container">
+            <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
+                <a href="index.html" class="navbar-brand">
+                    <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
+                </a>
+                <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="fa fa-bars text-dark"></span>
+                </button>
+                <div class="collapse navbar-collapse me-n3" id="navbarCollapse">
+                    <div class="navbar-nav ms-auto">
+                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="project.html" class="nav-item nav-link">Licence</a>
+                        <a href="service.html" class="nav-item nav-link">Services</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
-            </div>
+            </nav>
         </div>
-        <!-- Topbar End -->
-
-
-        <!-- Navbar Start -->
-        <div class="container-fluid bg-dark">
-            <div class="container">
-                <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
-                    <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
-                    </a>
-                    <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                        <span class="fa fa-bars text-dark"></span>
-                    </button>
-                    <div class="collapse navbar-collapse me-n3" id="navbarCollapse">
-                        <div class="navbar-nav ms-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="project.html" class="nav-item nav-link">Licence</a>
-                            <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
+    </div>
         <!-- Navbar End -->
+
 
         
         <!-- Page Header Start -->
@@ -126,21 +91,12 @@
 
 
          <!-- About Start -->
-  </style>
-</head>
-<body>
-        <div align="center">
-        <img src="img/brisklogo.png" alt="Brisk Pest Control" length="60", width="30%">
-      </div>
-    </div>
-  </div>
-</div>
        <div class="container-fluid testimonial py-5">
     <div class="container py-5">
         <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
             <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About Brisk</h1>
         </div>
-        <h2 class="display-5 w-50 mx-auto">Pest Control Services Since 2017</h2>
+        <h6 class="display-7 w-70 mx-auto">Pest Control Services Since 2017</h6>
         <p>Brisk Pest Management - A leading pest control service in India. We are committed to sustainable pest control, providing services nationwide. Our offerings include Housekeeping, Catering, Utilities, Garden and Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Manpower Supply.</p>
     </div>
 </div>
