--- a/project.html
+++ b/project.html
@@ -34,10 +34,48 @@
             width: 200px;
             height: 100px;
         }
+
+        /* Loading Popup Styles */
+        .loading-popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 1000;
+        }
+
+        .loading-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: #fff;
+        }
+
+        .loading-spinner {
+            border: 4px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            border-top: 4px solid #ffc107;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin-bottom: 10px;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .loading-popup.show {
+            display: block;
+        }
     </style>
 
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -77,21 +115,20 @@
         <div class="container py-5">
             <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
                 <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Licence</h1>
+                <p style="color: yellow;">PDF contains large files, so please preview and wait for 3 minutes</p>
             </div>
             <div class="row g-5">
                 <div class="pdf-links" style="text-align: center; background-color: #000; color: #fff; padding: 20px; border-radius: 10px;">
 
-                    <!-- PDF 1: BRISK PEST UDYAM.pdf -->
+                    <!-- PDF links go here... -->
                     <a href="img/BRISK PEST UDYAM.pdf" target="_blank" rel="noopener noreferrer" style="color: #fff; text-decoration: none; margin: 10px; padding: 10px 20px; border: 1px solid #fff; border-radius: 5px; display: inline-block;">Preview BRISK PEST UDYAM PDF</a>
 
                     <br>
 
-                    <!-- PDF 2: BRISK PEST.pdf -->
                     <a href="img/BRISK PEST.pdf" target="_blank" rel="noopener noreferrer" style="color: #fff; text-decoration: none; margin: 10px; padding: 10px 20px; border: 1px solid #fff; border-radius: 5px; display: inline-block;">Preview BRISK PEST PDF</a>
 
                     <br>
 
-                    <!-- PDF 3: Brisk GST.pdf -->
                     <a href="img/Brisk GST.pdf" target="_blank" rel="noopener noreferrer" style="color: #fff; text-decoration: none; margin: 10px; padding: 10px 20px; border: 1px solid #fff; border-radius: 5px; display: inline-block;">Preview Brisk GST PDF</a>
 
                 </div>
@@ -101,85 +138,80 @@
     <!-- Project End -->
 
     <!-- Footer Start -->
-        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
-            <div class="container py-5">
-                <div class="row g-4 footer-inner">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-item">
-                            <h4 class="text-white fw-bold mb-4">About brisk</h4>
-                            <p>Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
-Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
-                            <p class="mb-0"><a class="" href="#">brisk </a> &copy; 2023 All Right Reserved.</p>
+    <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
+        <div class="container py-5">
+            <div class="row g-4 footer-inner">
+                <div class="col-lg-3 col-md-6">
+                    <div class="footer-item">
+                        <h4 class="text-white fw-bold mb-4">About brisk</h4>
+                        <p>Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
+                            Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
+                        <p class="mb-0"><a class="" href="#">brisk </a> &copy; 2023 All Right Reserved.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="footer-item">
+                        <h4 class="text-white fw-bold mb-4">Usefull Link</h4>
+                        <div class="d-flex flex-column align-items-start">
+                            <a class="btn btn-link ps-0" href="about.html"><i class="fa fa-check me-2"></i>About Us</a>
+                            <a class="btn btn-link ps-0" href="contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
+                            <a class="btn btn-link ps-0" href="service.html"><i class="fa fa-check me-2"></i>Our Services</a>
+                            <a class="btn btn-link ps-0" href="project.html"><i class="fa fa-check me-2"></i>Licence</a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-item">
-                            <h4 class="text-white fw-bold mb-4">Usefull Link</h4>
-                            <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href="about.html"><i class="fa fa-check me-2"></i>About Us</a>
-                                <a class="btn btn-link ps-0" href="contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
-                                <a class="btn btn-link ps-0" href="service.html"><i class="fa fa-check me-2"></i>Our Services</a>
-                                <a class="btn btn-link ps-0" href="project.html"><i class="fa fa-check me-2"></i>Licence</a>
-                            </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="footer-item">
+                        <h4 class="text-white fw-bold mb-4">Services Link</h4>
+                        <div class="d-flex flex-column align-items-start">
+                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Rodent Control</a>
+                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Mosquito Control</a>
+                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Bed Bug Control</a>
+                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>WASP control</a>
+                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Ants Treatment</a>
+                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Cockroach Control</a>
+                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Fly Control</a>
+                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Honey Bee Removal</a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-item">
-                            <h4 class="text-white fw-bold mb-4">Services Link</h4>
-                            <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Rodent Control</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Mosquito Control</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Bed Bug Control</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>WASP control</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Ants Treatment</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Cockroach Control</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Fly Control</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Honey Bee Removal</a>
-
-
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-item">
-                            <h4 class="text-white fw-bold mb-4">Contact Us</h4>
-                            <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href="tel:+919900102056"><i class="fa fa-check me-2"></i>📞Call Us</a>
-                                <a class="btn btn-link ps-0" href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8"><i class="fa fa-check me-2"></i>📍Location</a>
-                                <a class="btn btn-link ps-0" href="mailto:info.briskpestmanagement@gmail.com"><i class="fa fa-check me-2"></i>📧Mail Us</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="footer-item">
+                        <h4 class="text-white fw-bold mb-4">Contact Us</h4>
+                        <div class="d-flex flex-column align-items-start">
+                            <a class="btn btn-link ps-0" href="tel:+919900102056"><i class="fa fa-check me-2"></i>📞Call Us</a>
+                            <a class="btn btn-link ps-0" href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8"><i class="fa fa-check me-2"></i>📍Location</a>
+                            <a class="btn btn-link ps-0" href="mailto:info.briskpestmanagement@gmail.com"><i class="fa fa-check me-2"></i>📧Mail Us</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Footer End -->
+    </div>
+    <!-- Footer End -->
 
-
-
-        <!-- Copyright Start -->
-<div class="container-fluid copyright py-4" style="background-color: rgba(0, 0, 0, 0);"> <!-- Set background color to transparent black -->
-    <div class="container-xl"> <!-- Changed to container-xl for extra-large width -->
-        <div class="row">
-            <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                <h1 class="text-primary mb-0 display-5" style="font-size: 1.2rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span></h1> <!-- Adjusted font-size -->
-            </div>
-            <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
-                <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-2 me-md-4"><i class="fab fa-facebook-f text-white"></i>facebook</a>
-                <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-2 me-md-4"><i class="fab fa-instagram text-white"></i>instagram</a>
-                <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-white"></i>linkedin</a>
-            </div>
-            <div class="col-md-4 my-auto text-center text-md-end text-white">
-                <p class="mb-0" style="font-size: 0.9rem;">Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a></p> <!-- Adjusted font-size -->
+    <!-- Copyright Start -->
+    <div class="container-fluid copyright py-4" style="background-color: rgba(0, 0, 0, 0);">
+        <div class="container-xl">
+            <div class="row">
+                <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                    <h1 class="text-primary mb-0 display-5" style="font-size: 1.2rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span></h1>
+                </div>
+                <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
+                    <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-2 me-md-4"><i class="fab fa-facebook-f text-white"></i>facebook</a>
+                    <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-2 me-md-4"><i class="fab fa-instagram text-white"></i>instagram</a>
+                    <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-white"></i>linkedin</a>
+                </div>
+                <div class="col-md-4 my-auto text-center text-md-end text-white">
+                    <p class="mb-0" style="font-size: 0.9rem;">Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a></p>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Copyright End -->
-        
+    <!-- Copyright End -->
 
-        <!-- Back to Top -->
-       <a href="#" class="btn btn-primary rounded-circle border-3 back-to-top"><i class="fa fa-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-primary rounded-circle border-3 back-to-top"><i class="fa fa-arrow-up"></i></a>
 
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -192,7 +224,20 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- Loading Popup Script -->
+    <script>
+        // Simulate loading for 3 seconds
+        $(document).ready(function () {
+            $('.pdf-links a').click(function () {
+                $('.loading-popup').addClass('show');
+                setTimeout(function () {
+                    $('.loading-popup').removeClass('show');
+                }, 3000);
+            });
+        });
+    </script>
+
 </body>
 
-</html>
 </html>
