--- a/service.html
+++ b/service.html
@@ -214,7 +214,7 @@
                     <div class="project-right bg-dark"></div>
                     <img src="BriskSrcFolder/BriskImages/BriskCockroach.gif" class="img-fluid h-100" alt="img" width="30" height="40">
                     <div class="project-details">
-                        <a href="" class="fs-4 fw-bold text-center">Cockroach Control</a>
+                        <a href="briskcockroach.html" class="fs-4 fw-bold text-center">Cockroach Control</a>
                         <p class="fs-6 text-center">Fast, eco Cockroach Control for a pest-free space!</p>
                     </div>
                 </div>
